left aligned e-mail form

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <!-- Begin MailChimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
             <style type="text/css">
-                #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+                #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;}
                 /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style>
             <div id="mc_embed_signup">
-            <form action="//ASL-LEX.us10.list-manage.com/subscribe/post?u=8aae9a4aceadfd785342c0e31&amp;id=80dada735f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <form action="//ASL-LEX.us10.list-manage.com/subscribe/post?u=8aae9a4aceadfd785342c0e31&amp;id=80dada735f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style='padding-left:0;' novalidate>
                 <div id="mc_embed_signup_scroll">
                 <p>Also, to keep up to date, subscribe to our e-list</p>
             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
