rearranged enter button

--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
 
         <div class='multiview_content' id='about'>
             <p>ASL-LEX is a database of lexical and phonological properties of nearly 1,000 signs in American Sign Language. This project is a collaboration between the <a href='http://emmoreylab.sdsu.edu/'>Laboratory for Language and Cognitive Neuroscience</a> at <a href='http://www.sdsu.edu/'>San Diego State University</a> and the <a href='http://ase.tufts.edu/psychology/psycholinglab/'>Psycholinguistics and Linguistics Lab</a> at <a href='http://www.tufts.edu/'>Tufts University</a>. ASL-LEX is a searchable database of subjective frequency ratings, iconicity ratings, lexical properties (e.g., initialized signs; lexical class), and six phonological features from which neighborhood densities have been calculated. ASL-LEX also provides, reference video clips, English translations and, for a subset of signs, alternative translations.</p>
-
-            <p>The content on this website is available under a CC-By-NC license, meaning you can reuse and remix this content with attribution for non-commercial purposes. If you would like to cite it, please use the following: Caselli, N., Sevcikova, Z., Cohen-Goldberg, A., Emmorey, K.  (in prep). ASL-Lex: A Lexical Database for ASL.</p>
-
-            <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
-
-            <p style='text-align: center'><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a></p>
         </div>
 
         <div class='multiview_content' id='instructions'>
@@ -96,7 +90,13 @@
             <p>Many thanks to Cindy O'Grady Farnady for modeling all of the signs and helping with data collection, to Ben Tanen for his help developing this website, and to Jennifer Feeney Petrich for her help conceptualizing and establishing the project. Thanks also to Marissa Maimone, Yvonne Xiong, Rebecca Nardulli, Adriana Alcala, Christina Massrey, Melissa Watton, Caitlyn Lahousse, Christina Ng, Jessica Mow, Laura Coughlin, and Taylor Strelevitz for their help coding lexical and phonological properties, and to Jordan Weber and Mahie Sumathipala for help preparing materials and coding. This work is supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, and a Tufts University Faculty Research Award to Dr. Ariel M. Cohen-Goldberg.</p>
         </div>
 
-        <a href='visual.html' id='enter_link'><h3 id='enter'>Enter Visualization</h3></a>
+        <a href='visual.html' id='enter_link'><h3 id='enter'>Enter</h3></a>
+
+        <p>The content on this website is available under a CC-By-NC license, meaning you can reuse and remix this content with attribution for non-commercial purposes. If you would like to cite it, please use the following: Caselli, N., Sevcikova, Z., Cohen-Goldberg, A., Emmorey, K.  (in prep). ASL-Lex: A Lexical Database for ASL.</p>
+
+        <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
+
+        <p style='text-align: center'><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a></p>
     </div>
 
     <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
