nearing end minor changes

--- a/visual.html
+++ b/visual.html
@@ -236,21 +236,20 @@
        <table class='about-filter-table'>
             <tr>
                 <td>Sign Frequency (M)</td>
-                <td>Mean subjective frequency rating (as rated by both native and non-native signers)</td>
+                <td>Mean subjective frequency rating for all participants (1 = very infrequent, 7 = very frequent)</td>
+            </tr>
+            <tr>
+                <td>Sign Frequency (SD)</td>
+                <td>Subjective frequency rating standard deviation (as rated by both native and non-native signers)</td>
             </tr>
             <tr>
                 <td>Sign Frequency (Z)</td>
-                <td>Standardized subjective frequency rating (z)  (as rated by both native and non-native signers)</td>
+                <td>Standardized subjective frequency rating (z) (as rated by both native and non-native signers)</td>
             </tr>
             <tr>
-                <td>Sign Frequency (M, Native)</td>
-                <td>Mean subjective frequency rating (as rated by native ASL signers only)</td>
+                <td>Sign Frequency (N)</td>
+                <td>Number of participants on which average frequency rating is based  (both native and non-native signers)</td>
             </tr>
-            <tr>
-                <td>Sign Frequency (Z, Native)</td>
-                <td>Standardized subjective frequency rating (z) (as rated by native ASL signers only)</td>
-            </tr>
-
         </table>
 
        <h4>Phonological Properties</h4>
@@ -297,11 +296,11 @@
        <table class='about-filter-table'>
             <tr>
                 <td>Lexical Class</td>
-                <td>The sign's lexical class</td>
+                <td>The sign's lexical class (Adjective, Adverb, Name, Noun, Number, Verb, and Minor: Preposition, Pronoun, Conjunction)</td>
             </tr>
             <tr>
                 <td>Compound</td>
-                <td>"1" indicates that the sign includes more than one free morpheme</td>
+                <td>"1" indicates that the sign is a compound. Compounds are signs that include more than one free morpheme, and morpheme boundaries are often indicated by a change in selected fingers or major location. </td>
             </tr>
             <tr>
                 <td>Initialized</td>
@@ -345,25 +344,37 @@
        <table class='about-filter-table'>
             <tr>
                 <td>Minimal Neighborhood Density</td>
-                <td>Number of signs that share one or more of six coded phonological properties (sign type, major region, minor region, selected fingers, flexion, and movement) with the sign</td>
+                <td>Number of signs that share one or more of five coded phonological properties (movement, flexion, selected fingers, major location, and sign type) with the sign</td>
             </tr>
             <tr>
                 <td>Parameter-Based Neighborhood Density</td>
-                <td>Number of signs that share all four phonological properties (major region, selected fingers, flexion, and movement) with the sign</td>
+                <td>Number of signs that share all four of four phonological properties (movement, flexion, selected fingers, major location) with the sign</td>
             </tr>
             <tr>
                 <td>Maximal Neighborhood Density</td>
-                <td>Number of signs that share five or more of six coded phonological properties (sign type, major region, minor region, selected fingers, flexion, and movement)  with the sign</td>
+                <td>Number of signs that share four or more of five coded phonological properties (movement, flexion, selected fingers, major location, and sign type)  with the sign</td>
             </tr>
         </table>
     </div>
 
     <div style="display: none" id="jBox-about-data-grab">
+        <br />
+        <table class='about-filter-table'>
+            <tr>
+                <td>EntryID</td>
+                <td>An English word that uniquely identifies each entry in the data set</td>
+            </tr>
+            <tr>
+                <td>LemmaID</td>
+                <td>An English word that uniquely identifies each lemma collapsing across phonological and inflectional variants</td>
+            </tr>
+        </table>
+
         <h4>Sign Frequency</h4>
         <table class='about-filter-table'>
             <tr>
                 <td>Sign Frequency (M)</td>
-                <td>Mean subjective frequency rating (as rated by both native and non-native signers)</td>
+                <td>Mean subjective frequency rating for all participants (1 = very infrequent, 7 = very frequent)</td>
             </tr>
             <tr>
                 <td>Sign Frequency (SD)</td>
@@ -371,7 +382,7 @@
             </tr>
             <tr>
                 <td>Sign Frequency (Z)</td>
-                <td>Standardized subjective frequency rating (z)  (as rated by both native and non-native signers)</td>
+                <td>Standardized subjective frequency rating (z) (as rated by both native and non-native signers)</td>
             </tr>
             <tr>
                 <td>Sign Frequency (N)</td>
@@ -399,7 +410,7 @@
         <table class='about-filter-table'>
             <tr>
                 <td>Iconicity (M)</td>
-                <td>Mean iconicity rating (as rated by hearing non-signers)</td>
+                <td>Mean iconicity rating (1 = not iconic at all; 7 = very iconic)</td>
             </tr>
             <tr>
                 <td>Iconicity (SD)</td>
@@ -419,11 +430,11 @@
         <table class='about-filter-table'>
             <tr>
                 <td>Lexical Class</td>
-                <td>The sign's lexical class</td>
+                <td>The sign's lexical class (Adjective, Adverb, Name, Noun, Number, Verb, and Minor: Preposition, Pronoun, Conjunction)</td>
             </tr>
             <tr>
                 <td>Compound</td>
-                <td>"1" indicates that the sign includes more than one free morpheme</td>
+                <td>"1" indicates that the sign is a compound. Compounds are signs that include more than one free morpheme, and morpheme boundaries are often indicated by a change in selected fingers or major location. </td>
             </tr>
             <tr>
                 <td>Initialized</td>
@@ -495,15 +506,15 @@
         <table class='about-filter-table'>
             <tr>
                 <td>Minimal Neighborhood Density</td>
-                <td>Number of signs that share one or more of six coded phonological properties (sign type, major region, minor region, selected fingers, flexion, and movement) with the sign</td>
+                <td>Number of signs that share one or more of five coded phonological properties (movement, flexion, selected fingers, major location, and sign type) with the sign</td>
             </tr>
             <tr>
                 <td>Parameter-Based Neighborhood Density</td>
-                <td>Number of signs that share all four phonological properties (major region, selected fingers, flexion, and movement) with the sign</td>
+                <td>Number of signs that share all four of four phonological properties (movement, flexion, selected fingers, major location) with the sign</td>
             </tr>
             <tr>
                 <td>Maximal Neighborhood Density</td>
-                <td>Number of signs that share five or more of six coded phonological properties (sign type, major region, minor region, selected fingers, flexion, and movement)  with the sign</td>
+                <td>Number of signs that share four or more of five coded phonological properties (movement, flexion, selected fingers, major location, and sign type)  with the sign</td>
             </tr>
         </table>
 
