--- a/visual.html
+++ b/visual.html
@@ -10,6 +10,14 @@
     <link href="css/bootleg-buttons.css" rel="stylesheet" type="text/css" />
     <link href="css/tabcontent.css" rel="stylesheet" type="text/css" />
     <script src="js/lib/jquery.min.js"></script>
+    <script>
+        // used to bypass mobile security issue in Chrome
+        $(document).bind('mobileinit',function(){
+            $.mobile.changePage.defaults.changeHash = false;
+            $.mobile.hashListeningEnabled = false;
+            $.mobile.pushStateEnabled = false;
+        });
+    </script>
     <script src="js/lib/jquery-mobile.min.js"></script>
     <script src="js/lib/jquery-ui.min.js"></script>
 
@@ -67,7 +75,7 @@
                 <p style='text-align: center;'><a id='about-filters' href='#'>About Filters</a> | <a href='#' onclick='removeFilters()'>Remove Filters</a></p>
 
                 <p id='active_nodes_p'>Active Nodes: <span>100</span></p>
-                <p id='active_filters_btn' onclick='showActiveFilters();'><img src='css/images/arrow.png' id='active_filters_arrow' />Active Filters</p>
+                <p id='active_filters_btn' class='active_filters' onclick='showActiveFilters();'><img class='active_filters' src='css/images/arrow.png' id='active_filters_arrow' />Active Filters</p>
                 <ul id='active_filters_list'>
                     <li>Tester</li>
                     <li>Tester #2</li>
@@ -572,7 +580,7 @@
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-54747354-2', 'auto');
       ga('send', 'pageview');
