--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ASLLex</title>
+    <title>ASL-LEX</title>
+    <link rel="icon" type="image/png" href="css/images/icon.png">
     <link rel="stylesheet" href="css/home.css">
 
     <script src="js/lib/jquery.min.js"></script>
@@ -90,7 +91,7 @@
             <p>Many thanks to Cindy O'Grady Farnady for modeling all of the signs and helping with data collection, to Ben Tanen for his help developing this website, and to Jennifer Feeney Petrich for her help conceptualizing and establishing the project. Thanks also to Marissa Maimone, Yvonne Xiong, Rebecca Nardulli, Adriana Alcala, Christina Massrey, Melissa Watton, Caitlyn Lahousse, Christina Ng, Jessica Mow, Laura Coughlin, and Taylor Strelevitz for their help coding lexical and phonological properties, and to Jordan Weber and Mahie Sumathipala for help preparing materials and coding. This work is supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, and a Tufts University Faculty Research Award to Dr. Ariel M. Cohen-Goldberg.</p>
         </div>
 
-        <a href='visual.html' id='enter_link'><h3 id='enter'>Enter</h3></a>
+        <a href='visualization/index.html' id='enter_link'><h3 id='enter'>Enter</h3></a>
 
         <div class='license'>
             <p>The content on this website is available under a CC-By-NC license, meaning you can reuse and remix this content with attribution for non-commercial purposes. If you would like to cite it, please use the following: Caselli, N., Sevcikova, Z., Cohen-Goldberg, A., Emmorey, K.  (in prep). ASL-Lex: A Lexical Database for ASL.</p>
@@ -101,6 +102,6 @@
         </div>
     </div>
 
-    <a href='visual.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
+    <a href='visualization/index.html'><img id='visualization_pic' src='css/images/visual.png' /></a>
 </body>
 </html>
