file management: organized files.

--- a/visualization/d3-index.html
+++ b/visualization/d3-index.html
@@ -20,8 +20,7 @@
         crossorigin="anonymous"></script>
 
     <script src="//d3js.org/d3.v5.min.js"></script>
-    <script src="../js/filterd3.js"></script>
-    <!-- <script src="../js/csvd3.js"></script> -->
+    <script src="../js/f-d3.js"></script>
 </body>
 
 </html>
