Static graph: getting a working static graph.

--- a/visualization/d3-index.html
+++ b/visualization/d3-index.html
@@ -6,12 +6,13 @@
     <title>Force Layout with labels on edges</title>
 
     <style type="text/css">
-
+        body {margin: 0}
     </style>
 </head>
 
 <body>
 
+    <!-- <svg id='viz'></svg> -->
     <svg id='viz'></svg>
 
     <script
@@ -20,7 +21,8 @@
         crossorigin="anonymous"></script>
 
     <script src="//d3js.org/d3.v5.min.js"></script>
-    <script src="../js/f-d3.js"></script>
+    <!-- <script src="../js/f-d3.js"></script> -->
+    <script src="../js//static.js"></script>
 </body>
 
 </html>
