Static example: working static example of asl_lex data

--- a/visualization/d3-index.html
+++ b/visualization/d3-index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- <svg id='viz'></svg> -->
-    <svg id='viz'></svg>
+    <svg width="960" height="500" id='viz'></svg>
 
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
