Forcelayout: static and force physics changes for experimentation.

--- a/visualization/d3-index.html
+++ b/visualization/d3-index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- <svg id="viz"></svg> -->
 
     <div class="container">
         <div class="visual-container">
@@ -26,8 +27,8 @@
 
     <!-- JS imports -->
     <script src="//d3js.org/d3.v5.min.js"></script>
-    <!-- <script src="../js/f-d3.js"></script> -->
-    <script src="../js//static.js"></script>
+    <script src="../js/f-d3.js"></script>
+    <!-- <script src="../js//static.js"></script> -->
 </body>
 
 </html>
