--- a/visualization/d3-index.html
+++ b/visualization/d3-index.html
@@ -11,6 +11,8 @@
 <body>
     <!-- <svg id="viz"></svg> -->
 
+    <button onclick="getCords()"> Get X and Y cords </button>
+
     <div class="container">
         <div class="visual-container">
                 <svg id='viz'></svg>
