--- a/visualization/d3-index.html
+++ b/visualization/d3-index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" type="text/css" href="../css/static-style.css">
 </head>
 
+<!-- filesaver -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js" ></script>
+
 <body>
     <!-- <svg id="viz"></svg> -->
 
-    <button onclick="getCords()"> Get X and Y cords </button>
+    <div id="content"></div>
 
     <div class="container">
         <div class="visual-container">
@@ -20,6 +23,7 @@
     </div>
 
     <!-- Package imports -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
