remove hardcoded dimensions, add responsiveness.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -11,15 +11,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js" ></script>
 
 <body>
-
-    <div class="container">
-        <svg id='viz'></svg>
-    </div>
-
+    <svg id='viz'></svg>
     <!-- Package imports -->
     <!-- JS imports -->
     <script src="//d3js.org/d3.v5.min.js"></script>
     <script src="js/f-d3.js"></script>
+     <link rel = "stylesheet"
+        type = "text/css"
+        href = "css/style.css" />
+
 </body>
 
 </html>
